--- a/views/test.html
+++ b/views/test.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Order stuff</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <link rel="text/css" href="/style.css">
   </head>
   <body>
