--- a/views/test.html
+++ b/views/test.html
@@ -12,6 +12,8 @@
       <input type="text" name="fName" value=""><br>
       Last Name:<br>
       <input type="text" name="lName" value=""><br>
+      Phone Number:<br>
+      <input type="text" name="phone" value=""><br>
       Address:<br>
       <input type="text" name="address" value=""><br>
       City: <br />
