--- a/views/test.html
+++ b/views/test.html
@@ -6,7 +6,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <link rel="text/css" href="/style.css">
   </head>
+  <style>
+    ul {list-style: none; margin: 0; padding: 0; overflow: hidden; background-color: #333}
+    li {float: left;}
+    li a {display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none;}
+    li a:hover {background-color: #111;}
+  </style>
   <body>
+    <ul>
+      <li><a href="/">Home Page</a></li>
+      <li><a href="/getInfo">Get Info</a></li>
+    </ul>
     <form action="/Send" method="post">
       First Name:<br>
       <input type="text" name="fName" value=""><br>
