--- a/views/thankYou.html
+++ b/views/thankYou.html
@@ -6,7 +6,17 @@
     <link rel="text/css" href="/style.css">
     <title>Thank you</title>
   </head>
+  <style>
+      ul {list-style: none; margin: 0; padding: 0; overflow: hidden; background-color: #333}
+      li {float: left;}
+      li a {display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none;}
+      li a:hover {background-color: #111;}
+  </style>
   <body>
+      <ul>
+          <li><a href="/">Home Page</a></li>
+          <li><a href="/getInfo">Get Info</a></li>
+        </ul>
     <h1 style="text-align: center">Thank you for filling out the survey</h1>
   </body>
 </html>
