Added new page and redeisgn of main page

--- a/views/createCampaign.html
+++ b/views/createCampaign.html
@@ -18,20 +18,18 @@
       <li><a href="/getInfo">Get Info</a></li>
     </ul>
     <form action="/Send" method="post">
-      First Name:<br>
-      <input type="text" name="fName" value=""><br>
-      Last Name:<br>
-      <input type="text" name="lName" value=""><br>
-      Phone Number:<br>
-      <input type="text" name="phone" value=""><br>
-      Address:<br>
-      <input type="text" name="address" value=""><br>
-      City: <br />
-      <input type="text" name="city" value=""><br>
-      State: <br />
-      <input type="text" name="state" value=""><br>
-      Zip: <br>
-      <input type="text" name="zip" value=""><br><br>
+      Campaign Name:<br>
+      <input type="text" name="campName" value=""><br>
+      Type (I for Inbound or O for Outbound):<br>
+      <input type="text" name="type" value=""><br>
+      TemplateName:<br>
+      <input type="text" name="templateName" value=""><br>
+      TemplateID:<br>
+      <input type="text" name="teamplateID" value=""><br>
+      Custome Fields: <br />
+      <input type="text" name="custFields" value=""><br>
+      NewLeadName: <br />
+      <input type="text" name="newLeadName" value=""><br>
       <input type="submit" value="Submit" id="btnSend" />
     </form>
   </body>
