Added new view and cleaned up view

--- a/views/createCampaign.html
+++ b/views/createCampaign.html
@@ -16,6 +16,7 @@
     <ul>
       <li><a href="/">Home Page</a></li>
       <li><a href="/getInfo">Get Info</a></li>
+      <li><a href="/getInfo"></a>Get Campaign Info</li>
     </ul>
     <form action="/Send" method="post">
       Campaign Name:<br>
