--- a/views/thankYou.html
+++ b/views/thankYou.html
@@ -13,10 +13,11 @@
       li a:hover {background-color: #111;}
   </style>
   <body>
-      <ul>
-          <li><a href="/">Home Page</a></li>
-          <li><a href="/getInfo">Get Info</a></li>
-        </ul>
+    <ul>
+      <li><a href="/">Home Page</a></li>
+      <li><a href="/getInfo">Get Info</a></li>
+      <li><a href="/getInfo"></a>Get Campaign Info</li>
+    </ul>
     <h1 style="text-align: center">Thank you for filling out the survey</h1>
   </body>
 </html>
