Split the campaigns. Add single campaign sheet.

--- a/views/formFill.html
+++ b/views/formFill.html
@@ -25,7 +25,8 @@
   <body>
     <ul>
       <li><a href="/">Home Page</a></li>
-      <li><a href="/getInfo">Get Info</a></li>
+      <li><a href="/getInfo">Campaign Info</a></li>
+      <li><a href="/createCampaign">Create Campaign</a></li>
     </ul>
     <form action="/Send" method="post">
       <div class="container">
