--- a/views/thankYou.html
+++ b/views/thankYou.html
@@ -15,8 +15,8 @@
   <body>
     <ul>
       <li><a href="/">Home Page</a></li>
-      <li><a href="/getInfo">Get Info</a></li>
-      <li><a href="/getInfo"></a>Get Campaign Info</li>
+      <li><a href="/getInfo"></a>Campaign Info</li>
+      <li><a href="/createCampaign">Create Campaign</a></li>
     </ul>
     <h1 style="text-align: center">Thank you for filling out the survey</h1>
   </body>
