--- a/views/createCampaign.html
+++ b/views/createCampaign.html
@@ -15,8 +15,8 @@
   <body>
     <ul>
       <li><a href="/">Home Page</a></li>
-      <li><a href="/getInfo">Get Info</a></li>
-      <li><a href="/getInfo"></a>Get Campaign Info</li>
+      <li><a href="/getInfo">Campaign Info</a></li>
+      <li><a href="/createCampaign">Create Campaign</a></li>
     </ul>
     <form action="/Send" method="post">
       Campaign Name:<br>
