--- a/views/singleCampaign.html
+++ b/views/singleCampaign.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Campaign Info</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <style>
       ul {list-style: none; margin: 0; padding: 0; overflow: hidden; background-color: #333}
@@ -10,9 +11,18 @@
       li a {display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none;}
       li a:hover {background-color: #111;}
       .container{border-radius: 5px; background-color: #f2f2f2; padding:60px;margin:60px;}
-      .col-25{float: left; width: 15%;margin-top:6px;}
-      .col-75{float: right; width:85%; margin-top:6px;}
+      .col-25{float: left; width: 20%;margin-top:6px; padding-left: 6em;}
+      .col-75{float: right; width:25%; margin-top:6px; padding-right: 6em;}
       .row:after{content:""; display:table;clear:both;}
+      .switch {position: relative;display: inline-block;width: 60px;height: 34px;}
+      .switch input { opacity: 0;width: 0;height: 0;}
+      .slider {position: absolute;cursor: pointer;top: 0;left: 0;right: 0;bottom: 0;background-color: #ccc;-webkit-transition: .4s;transition: .4s;}
+      .slider:before {position: absolute;content: "";height: 26px;width: 26px;left: 4px;bottom: 4px;background-color: white;-webkit-transition: .4s;transition: .4s;}
+      input:checked + .slider {background-color: #2196F3;}
+      input:focus + .slider {box-shadow: 0 0 1px #2196F3;}
+      input:checked + .slider:before {-webkit-transform: translateX(26px);-ms-transform: translateX(26px);transform: translateX(26px);}
+      .slider.round {border-radius: 34px;}
+      .slider.round:before {border-radius: 50%;}
   </style>
   <body>
     <ul>
@@ -30,9 +40,9 @@
         <div class="col-25">
           <label for="">Campaign ID:</label>
         </div>
-        <div></div>
-      <div class="col-75">
-        <label for="">{{cid}}</label>
+        <div class="col-75">
+          <label for="">{{cid}}</label>
+        </div>
       </div>
       <div class="row">
         <div class="col-25">
@@ -74,8 +84,14 @@
           <label for="">{{cGroup}}</label>
         </div>
       </div>
+      <br><br>
+      <label style="display: block; margin:0 auto;" class="switch">
+        <input type="checkbox">
+        <span class="slider round"></span>
+      </label>
     </div>
     {{/cData}}
+
 <!--     
     {{#cData}}
     <h1 style="text-align: center">{{name}}</h1>
