Fixing issue on phone

--- a/views/singleCampaign.html
+++ b/views/singleCampaign.html
@@ -11,8 +11,8 @@
       li a {display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none;}
       li a:hover {background-color: #111;}
       .container{border-radius: 5px; background-color: #f2f2f2; padding:60px;margin:60px;}
-      .col-25{float: left; width: 20%;margin-top:6px; padding-left: 6em;}
-      .col-75{float: right; width:25%; margin-top:6px; padding-right: 6em;}
+      .col-25{float: left; width: 20%;margin-top:6px;}
+      .col-75{float: right; width:80%; margin-top:6px;}
       .row:after{content:""; display:table;clear:both;}
       .switch {position: relative;display: inline-block;width: 60px;height: 34px;}
       .switch input { opacity: 0;width: 0;height: 0;}
@@ -84,11 +84,11 @@
           <label for="">{{cGroup}}</label>
         </div>
       </div>
-      <br><br>
-      <label style="display: block; margin:0 auto;" class="switch">
-        <input type="checkbox">
-        <span class="slider round"></span>
-      </label>
+          <br><br>
+    <label style="display: block; margin:0 auto;" class="switch">
+      <input type="checkbox">
+      <span class="slider round"></span>
+    </label>
     </div>
     {{/cData}}
 
