Added new edit campaign section. Fixed formatting

--- a/views/campaignInfo.html
+++ b/views/campaignInfo.html
@@ -20,6 +20,14 @@
             td:hover{background-color: #145374; color: #e8e8e8;}
             #cTable td {text-align: center;vertical-align: middle;}
             h1 {text-align: center;}
+            @media screen and (max-width: 600px){
+                table{
+                    width: 100%;
+                }
+                table, thead, tbody, th, td, tr { 
+                    display: block; 
+                }
+            }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
         <script>
