--- a/views/singleCampaign.html
+++ b/views/singleCampaign.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Campaign Info</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <style>
@@ -25,6 +26,8 @@
       .slider.round {border-radius: 34px;}
       .slider.round:before {border-radius: 50%;}
       h1 {font-size:1em; text-align: center;}
+      .bottomContainter {margin-left:10em;}
+      .offset{margin-left:20px;}
       @media (max-width: 600px){
         .col-25,.col-75{
           width: 100%;
@@ -37,10 +40,38 @@
         .row{
           margin-left: 0em;
         }
+        .bottomContainter, .offset{
+          margin-left:0em;
+          padding: 0;
+        }
       }
       /* @media screen and (max-width: 600px){.col-25,.col-75,input[type=submit]{width:100%; margin-top:0;}} */
   </style>
-  <body>
+  <script>
+    function switchedCheck(){
+      alert(document.getElementById('switchThing').checked);
+      //When our checkbox is clicked we want it to do something
+      var data = {"tape": "thisThing"};
+      console.log(data);
+      $.ajax({
+          type: "POST",
+          url: "/campStatChange",
+          data: data,
+      }).done(function(data) {
+              console.log(data);
+      });
+    }
+    //We want to parse the url and change the checkbox depending on what comes through the url
+    function myFunction(){
+      var str = location.href;
+      var splitRes = str.split('&');
+      console.log(splitRes);
+      if(splitRes[4] === 'stat=ON'){
+        document.getElementById('switchThing').checked = true;
+      }
+    }
+  </script>
+  <body onload="myFunction()">
     <ul>
       <li><a href="/">Home Page</a></li>
       <li><a href="/getInfo">Campaign Info</a></li>
@@ -104,19 +135,20 @@
           <br><br>
           
     <label style="display: block; margin:0 auto;" class="switch">
-      <input name="switchThing" type="checkbox">
+      <input name="switchThing" type="checkbox" id='switchThing' onclick="switchedCheck();">
       <span class="slider round"></span>
     </label>
     </div>
     {{/cData}}
     <h1 style="padding: .5px;">Edit settings </h1>
     <div class='container'>
-      <div>
+      <div class='bottomContainter'>
         <label for="dispoCopier">Copy dispos to {{name}} from </label>
-        <select name="dispoCopier" id="">
+        <select class='offset' name="dispoCopier" id="">
           <option value="Campaign A">Campaign A</option>
           <option value="Campaign B">Campaign B</option>
         </select>
+        <button class='offset'>Add dispositions</button>
     </div>
     </div>
   </body>
